(chore): add UUID for identification
